Wed Jan 21 09:33:39 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/vasprintf.c: fix portability problem
	* src/tds/challenge.c: check correctly error converting to ucs2

Mon Jan 19 15:36:50 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: dos2unix

Fri Jan 16 15:28:57 EST 2009	JK Lowden <jklowden@freetds.org>
	* FreeTDS.sln 
	* src/ctlib/ct-lib.vcproj src/dblib/db-lib.vcproj
	* src/odbc/odbc.vcproj src/replacements/replacements.vcproj
	* src/tds/TDS.vcproj
	- add Visual Studio project files

Fri Jan 16 15:19:20 EST 2009	JK Lowden <jklowden@freetds.org>
	* include/md4.h include/md5.h
	* include/replacements.h
	* include/sqldb.h include/sqlfront.h include/sybdb.h
	* include/tds.h include/tds_sysdep_private.h
	* include/tdsstring.h
	* samples/odbc_rpc.pl
	* src/dblib/bcp.c src/dblib/dblib.c
	* src/dblib/dbopen.c src/dblib/dbutil.c
	* src/dblib/rpc.c src/dblib/xact.c
	* src/replacements/fakepoll.c src/replacements/readpassphrase.c
	* src/replacements/vasprintf.c
	* src/tds/bulk.c src/tds/challenge.c src/tds/config.c
	* src/tds/convert.c src/tds/getmac.c src/tds/iconv.c
	* src/tds/log.c src/tds/login.c src/tds/md4.c
	* src/tds/md5.c src/tds/mem.c src/tds/net.c src/tds/numeric.c
	* src/tds/query.c src/tds/read.c src/tds/tdsstring.c
	* src/tds/threadsafe.c src/tds/token.c src/tds/vstrbuild.c
	* src/tds/write.c 
	* src/tds/unittests/dynamic1.c src/tds/unittests/flags.c
	* src/tds/unittests/numeric.c
	- fewer warnings compiling for Win64

Mon Jan 12 09:15:34 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqldb.c: ask for password if not specified

Mon Jan 12 09:08:21 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: make get_default_instance_port static

Thu Jan  8 23:47:33 EST 2009	JK Lowden <jklowden@freetds.org>
	* src/apps/Makefile.am src/apps/fisql/Makefile.am
	* src/replacements/fakepoll.h 
	- add LIBICONV to linker flags
