@@ -1,3 +1,6 @@
+Wed Jan 21 09:43:32 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/replacements/fakepoll.c: make it compile
+
 Wed Jan 21 09:33:39 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/replacements/vasprintf.c: fix portability problem
 	* src/tds/challenge.c: check correctly error converting to ucs2
@@ -1217,4 +1220,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2712 2009/01/21 08:34:01 freddy77 Exp $
+$Id: ChangeLog,v 1.2713 2009/01/21 08:43:54 freddy77 Exp $
